# Skill_GEMINI_Extension

./: .embeddings_cache.pkl  .geminiignore  .gitignore  GEMINI.md  README.md  gemini-extension.json  pyproject.toml
commands/: load-skill.toml
mcp_app/: __init__.py  manager.py  mcp_Server.py  models.py  search.py  skills_server.py  version.py
skills/mcp-builder/: SKILL.md
skills/skill-creator_files/: SKILL.md
