[project]
name = "Gemini_Skills"
version = "0.2.2"
description = "An MCP (Model Context Protocol) server for loading skills on demand, designed to be used as a Gemini extension."
authors = [{ name = "MohamedHamed19m", email = "user@example.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp",
    "pydantic",
    "pyyaml"
]

[project.optional-dependencies]
dev = [
    "uv",
    "tomlkit"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_app"]